crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_parse_errors_report_diagnostics_and_do_not_write.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 1
stdout:
<empty>
stderr:
A.java:1:7: java.parse.expected_syntax: expected type name
A.java:2:1: java.parse.expected_syntax: expected `}` after type body
Checked 1 file in $TIME
format check failed: 1 file could not be formatted
files:
-- A.java --
class {
