crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_all_changed_files_with_summary_count.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output,\n&[temp.path().join(\"A.java\"), temp.path().join(\"B.java\"),\ntemp.path().join(\"C.java\"),],)"
---
status: 1
stdout:
A.java
C.java
stderr:
Checked 3 files in $TIME
2 files need formatting
files:
-- A.java --
class A {}
-- B.java --
class B {
}
-- C.java --
class C {}
