crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_changed_file_without_writing.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 1
stdout:
A.java
stderr:
Checked 1 file in $TIME
1 file needs formatting
files:
-- A.java --
class A {}
