crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_changed_stdin_filename.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 1
stdout:
src/Main.java
stderr:
1 file needs formatting
files:
<none>
