crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_mixed_changed_and_recovered_files.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output,\n&[temp.path().join(\"Bad.java\"), temp.path().join(\"Changed.java\"),],)"
---
status: 1
stdout:
Changed.java
stderr:
Checked 2 files in $TIME
1 file needs formatting
files:
-- Bad.java --
class {
-- Changed.java --
class Changed {}
