crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_recovered_parse_as_changed.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 0
stdout:
<empty>
stderr:
Checked 1 file in $TIME
files:
-- A.java --
class {
