crates/jolt_cli/tests/snapshots/cli_snapshots__check_mode_reports_syntax_error_as_failed.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 1
stdout:
<empty>
stderr:
A.java:1:7: java.parse.expected_syntax: expected type name
Checked 1 file in $TIME
format check failed: 1 file could not be formatted
files:
-- A.java --
class {
